# netadmin-agent

./: .env.example  .gitignore  AGENTS.md  IDENTITY.md  PHASE1-PLAN.md  README.md  ROADMAP.md  main.py  pyproject.toml
.learnings/: ERRORS.md
agent/: config.py  prompts.py
agent/cli/: app.py  formatting.py  history.py  memory.py  parsing.py  status.py
agent/connection/: README.md  __init__.py
agent/intents/: __init__.py
agent/parsers/: __init__.py  cisco.py
agent/providers/: __init__.py  base.py  factory.py  fallback.py  gemini.py  openai.py
agent/skills/: __init__.py  connectivity.py  discovery.py  port_scan.py  ssh_diagnostics.py
agent/skills/cisco/: __init__.py  common.py  playbooks.py
agent/tools/: __init__.py  intents.py  inventory.py  network.py  safety.py  scanning.py  ssh.py
demos/: gemini_log_demo.py  simulator_integration_demo.py
tests/: test_cisco_parsers.py  test_cisco_ssh_simulator.py  test_followups.py  test_main.py  test_ping_only_scan.py  test_platforms.py  test_prompts.py  test_providers.py  test_skills.py  test_tools.py
